--- a/assets/scss/default/_variables.scss
+++ b/assets/scss/default/_variables.scss
@@ -69,9 +69,9 @@
 
 
     // Font Family
-    --font-primary: 'Alte Haas', sans-serif;
-    --font-medium: 'Aeonik Medium', sans-serif;
-    --font-secondary: 'Aeonik Medium', sans-serif;
+    --font-primary: 'Inter', sans-serif;
+    --font-medium: 'Inter Medium', sans-serif;
+    --font-secondary: 'Inter Semibold', sans-serif;
     --font-3: 'fontawesome';
     //Fonts Size
     --font-size-b1: 16px;
