--- a/assets/scss/elements/_mega-menu.scss
+++ b/assets/scss/elements/_mega-menu.scss
@@ -154,7 +154,7 @@
     li {
       a {
         border-bottom: 1px solid #f7f7f7;
-        font-family: var(--font-primary);
+        font-family: "Inter Medium";
       }
 
       &:last-child {
