--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -1,17 +1,63 @@
-//* Aeonik
+//* Inter
+// Regular
+@font-face {
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter Italic";
+  src: url("../assets/fonts/Inter-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
 
+// Light
 @font-face {
-  font-family: "Aeonik";
-  src: 
-    url("../assets/fonts/Aeonik-Regular.otf") format("opentype");
-  // font-weight: 500;
+  font-family: "Inter Light";
+  src: url("../assets/fonts/Inter-Light.ttf") format("truetype");
+  font-weight: lighter;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Aeonik Medium";
-  src: 
-    url("../assets/fonts/Aeonik-Medium.otf") format("opentype");
-  // font-weight: 500;
+  font-family: "Inter Light Italic";
+  src: url("../assets/fonts/Inter-LightItalic.ttf") format("truetype");
+  font-weight: light;
+  font-style: italic;
 }
+
+// Medium
+@font-face {
+  font-family: "Inter Medium";
+  src: url("../assets/fonts/Inter-Medium.ttf") format("truetype");
+  font-weight: medium;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter Medium Italic";
+  src: url("../assets/fonts/Inter-MediumItalic.ttf") format("truetype");
+  font-weight: medium;
+  font-style: italic;
+}
+
+// SemiBold
+@font-face {
+  font-family: "Inter Semibold";
+  src: url("../assets/fonts/Inter-SemiBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter Semibold Italic";
+  src: url("../assets/fonts/Inter-SemiBoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+
+
+
 
 //* IKOB
 @font-face {
@@ -31,36 +77,15 @@
 //* Alte Haas Grotesk
 @font-face {
   font-family: "Alte Haas";
-  src: url("../assets/fonts/alte/altehaasgroteskregular.ttf") format("truetype");
+  src: url("../assets/fonts/Alte/AlteHaasGroteskRegular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Alte Haas Bold";
-  src: url("../assets/fonts/alte/altehaasgroteskbold.ttf") format("truetype");
+  src: url("../assets/fonts/Alte/AlteHaasGroteskBold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
-}
-
-
-//* Geist
-@font-face {
-  font-family: "Geist Light";
-  src: url("../assets/fonts/geist/geist-light.otf") format("opentype");
-  font-style: normal;
-}
-@font-face {
-  font-family: "Geist";
-  src: url("../assets/fonts/geist/geist-regular.otf") format("opentype");
-  font-weight: normal;
-}
-@font-face {
-  font-family: "Geist Medium";
-  src: url("../assets/fonts/geist/geist-medium.otf") format("opentype");
-}
-@font-face {
-  font-family: "Geist Semibold";
-  src: url("../assets/fonts/geist/geist-semibold.otf") format("opentype");
 }
 
 
@@ -83,7 +108,7 @@ body {
   line-height: var(--line-height-b1);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Alte Haas", sans-serif;
+  font-family: "Inter", sans-serif;
   color: var(--color-body);
   font-weight: var(--p-regular);
   position: relative;
@@ -142,10 +167,7 @@ hr {
   margin-bottom: 20px;
 }
 
-h1,
-h2,
-h3,
-h4,
+
 h5,
 h6,
 .h1,
@@ -155,9 +177,8 @@ h6,
 .h5,
 .h6 {
   word-break: break-word;
-  font-family: "Alte Haas", sans-serif;
+  font-family: "Inter Medium", sans-serif;
   line-height: 1.4074;
-  -webkit-text-stroke: .3px;
   color: var(--color-heading-1);
 }
 
@@ -167,6 +188,7 @@ h3,
 h4 {
   font-family: "IKOB";
   color: var(--color-offset);
+  letter-spacing: -1px;
 }
 
 h1,
