--- a/assets/scss/elements/_contact.scss
+++ b/assets/scss/elements/_contact.scss
@@ -28,7 +28,7 @@
     font-size: 16px;
     color: #6d6d6d;
     padding: 12px;
-
+    background-color: #f9f9f9;
     &:focus,
     &:hover {
       border: 1px solid var(--color-primary);
@@ -65,7 +65,7 @@
     font-size: 16px;
     color: #6d6d6d;
     padding: 12px;
-
+    background-color: #f9f9f9;
     &:focus,
     &:hover {
       border: 1px solid var(--color-primary);
