Added back in the styling for the timeline after accidentally deleting.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -74,6 +74,7 @@
 @import "elements/mega-menu";
 @import "elements/rtl";
 @import "elements/slider";
+@import "elements/timeline";
 @import "elements/gradient-blur";
 
 // Custom
